--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -14,6 +14,10 @@
   border-bottom: 2px solid var(--onegray);
 }
 
+.p-r-md {
+  padding-right: var(--space-md);
+}
+
 .p-l-md {
   padding-left: var(--space-md);
 }
