--- a/src/css/index.css
+++ b/src/css/index.css
@@ -291,7 +291,7 @@ input:checked ~ span {
   padding-left: 0.25rem;
   height: 6rem;
   width: 6rem;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .item2 {
